# geometric_algebra

./: Cargo.toml  README.md
.github/workflows/: actions.yaml
codegen/: Cargo.toml
codegen/src/: algebra.rs  ast.rs  compile.rs  emit.rs  glsl.rs  main.rs  rust.rs  wgsl.rs
simd/: Cargo.toml
simd/src/: lib.rs
src/: lib.rs  polynomial.rs  simd.rs
